@@ -28,7 +28,6 @@ import org.neo4j.graphdb.{Direction, Node}
 import org.neo4j.cypher.internal.pipes.QueryState
 import org.junit.Test
 import values.{ResolvedLabel, LabelName}
-import org.neo4j.cypher.internal.parser.v2_0.LabelSet
 
 class LabelActionTest extends GraphDatabaseTestBase with Assertions {
   val queryContext = new SnitchingQueryContext
@@ -121,4 +120,11 @@ class SnitchingQueryContext extends QueryContext {
   def replaceLabelsOfNode(node: Long, labelIds: Iterable[Long]) {???}
 
   def getTransaction = ???
+
+  def getOrCreatePropertyKeyId(propertyKey: String) = ???
+
+  def getPropertyKeyId(propertyKey: String) = ???
+
+  def addIndexRule(labelIds: Long, propertyKeyId: Long)
+  {}
 }
